# wasm-py

./: .pre-commit-config.yaml  README.md  setup.cfg
.devcontainer/: Dockerfile  devcontainer.json
scripts/: compile-test.sh
tests/: test.c  test.digest.txt  test.wasm  test.wat
wasm_py/: __main__.py  values.py
wasm_py/core/: enums.py  module.py  types.py
wasm_py/core/models/: expr.py  glob.py  limits.py  memory.py  table.py
wasm_py/core/models/types/: function_type.py  glob_type.py  limits.py  mem_type.py
wasm_py/core/models/values/: number.py
wasm_py/parse/: instr.py  instr_opcode.py  sections.py  types.py  utils.py  values.py
wasm_py/utils/: parser.py
