[metadata]
name = wasm-py
version = 0.0.1
url = https://github.com/tonibofarull/wasm-py
author = Antoni Bofarull Cabello
author_email = tonibofarull@gmail.com
description = A WebAssembly interpreter written in pure Python
classifiers =
    Programming Language :: Python :: 3.10

[options]
python_requires = >=3.10
packages = find:
install_requires =
    pydantic==1.10.4
    numpy==1.24.2

[flake8]
max-line-length = 88
